# rootops

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  demo_local_repo.py  docker-compose.dev.yml  docker-compose.yml  quickstart.sh  release.sh  requirements.txt  static-analysis.datadog.yml  test_api.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 0002_halfvec_hnsw.py  0003_embedding_768.py  0004_multi_repo.py  0005_architecture_improvements.py
api/app/: config.py  db.py  main.py
api/app/api/: concepts.py  graph.py  heal.py  ingest.py  logs.py  pr_review.py  profiles.py  query.py  repos.py
api/app/models/: __init__.py  base.py  code_chunk.py  codebase_summary.py  commit.py  dev_profile.py  entity_registry.py  graph_edge.py  ingestion_state.py  log_concept.py  log_entry.py  pending_fix.py  repository.py  service_dependency.py
api/app/services/: anthropic_client.py  bedrock_client.py  causation_service.py  chunker.py  dep_extractor.py  embedding.py  gemini_client.py  git_ingestor.py  github_client.py  healer.py  llm_backend.py  llm_client.py  log_concept_service.py  log_ingestor.py  openai_client.py  otel_collector.py  pattern_analyzer.py  query_planner.py  rag_engine.py
api/scripts/: init-db.sql  seed_demo.py
api/tests/: __init__.py  conftest.py  test_api_health.py  test_healer_async.py  test_rag_async.py  test_services.py
deploy/cloud/: .env.cloud.example  Caddyfile  (+5 more)
docs/: DOCKER_RELEASE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  api-reference.md  architecture.md  quickstart.md
src/: __init__.py  config.py  database.py  main.py  monitoring.py
web/: .dockerignore  .npmrc  Dockerfile  next.config.ts  package-lock.json  package.json
(+59 files in other folders)
