[project]
name = "rootops-api"
version = "1.0.0"
description = "The AI-Native Internal Developer Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "pgvector==0.3.6",
    "pydantic-settings==2.7.1",
    "alembic==1.14.1",
    "python-dotenv==1.0.1",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0,<5.0.0",
    "gitpython>=3.1.47",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "boto3>=1.34.0",
    "google-genai>=1.0.0",
    "PyGithub>=2.0.0",
    "drain3>=0.9.11",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "anyio[asyncio]>=4.0.0",
    "httpx>=0.27.0",        # AsyncClient for TestClient transport
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Use anyio as the async test runner (compatible with both asyncio and trio)
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
